<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

  <ImageView
      android:id="@+id/background_image"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@drawable/bckgrnd1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/opacity_background_image"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:alpha="50"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@color/colorPrimary" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/login_elements_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_top_big"
      android:layout_marginEnd="@dimen/margin_small"
      android:background="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:hint="@string/username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_marginEnd="@dimen/small_font_size"
        android:hint="@string/password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et" />

    <LinearLayout
        android:id="@+id/login_register_buttons_and_tv_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et">

      <LinearLayout
          android:id="@+id/login_register_buttons_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <Button
            android:id="@+id/login_btn"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_extra_small"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/go_to_register_btn"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:text="@string/go_to_register_button" />
      </LinearLayout>

      <TextView
          android:id="@+id/forgot_password_tv"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/margin_standard"
          android:layout_marginBottom="@dimen/margin_standard"
          android:gravity="center"
          android:text="@string/forgo_password"
          android:textSize="@dimen/small_font_size" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>