<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword">

  <ImageView
      android:id="@+id/background_image"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@drawable/bckgrnd1"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/opacity_background_image"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:alpha="50"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@color/colorPrimary" />

  <LinearLayout
      android:id="@+id/forgot_password_activity_elements_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_top_big"
      android:layout_marginEnd="@dimen/margin_small"
      android:background="@android:color/white"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/forgot_password_desc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/forgot_password_desc_tv" />

    <EditText
        android:id="@+id/forgot_password_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/email_hint" />

    <Button
        android:id="@+id/send_reset_passeword_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/reset_password_btn"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>